--- a/package.json
+++ b/package.json
@@ -20,26 +20,18 @@
     "singleQuote": true
   },
   "dependencies": {
-    "clsx": "^1.1.1",
-    "jszip": "^3.7.1",
-    "mitt": "^3.0.0",
+    "jszip": "^3.10.1",
     "nanoid": "^3.1.30",
-    "preact": "^10.5.15",
-    "preact-router": "^3.2.1",
     "slother": "^0.2.1",
-    "ssws": "^1.0.0",
-    "threads": "^1.7.0"
+    "squoll": "0.1.4",
+    "svelte": "^3.49.0"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.1.5",
-    "@tailwindcss/line-clamp": "^0.2.2",
-    "anyas": "^0.2.0",
+    "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "del-cli": "^4.0.1",
-    "postcss-nested": "^5.0.6",
     "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.17",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.11",
-    "vite-plugin-solid": "^2.1.1"
+    "svelte-preprocess": "^4.10.7",
+    "typescript": "^4.8.4",
+    "vite": "^2.9.15"
   }
 }
